--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Lucas Ravellys">
 
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
-    <link href={% static "css/bootstrap.min.css" %}
+    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
     <link href={% static  "css/style.css" %} rel="stylesheet">
     <script src={% static "js/jquery.min.js" %}></script>
     <script src={% static "js/bootstrap.min.js" %}></script>
