--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -12,8 +12,8 @@
     <meta name="author" content="Lucas Ravellys">
 
     <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet">
-    <link href={% static  "css/style.css" %} rel="stylesheet">
+    <link type="text/css" href={% static "css/bootstrap.min.css" %} rel="stylesheet">
+    <link type="text/css" href={% static  "css/style.css" %} rel="stylesheet">
     <script src={% static "js/jquery.min.js" %}></script>
     <script src={% static "js/bootstrap.min.js" %}></script>
     <script src={% static "js/scripts.js" %}></script>
