--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -40,13 +40,39 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
-				<h2>
-                      Curso de Python
-				</h2>
-				<p>
-					Confira em breve mais informações do curso que será ministrado pelo autor do livro
-                    <a href="https://www.amazon.com.br/Python-Fluente-Programa%C3%A7%C3%A3o-Concisa-Eficaz/dp/857522462X" target="_blank">Python Fluente</a>
-				</p>
+				<h2>Curso de Python</h2>
+                <h4 class="mt-4">Matriculas Abertas</h4>
+                <!-- INICIO DO BOTAO PAGSEGURO -->
+                <a href="https://pag.ae/7Wpwjtjew/button" target="_blank" title="Pagar com PagSeguro">
+                    <img src="//assets.pagseguro.com.br/ps-integration-assets/botoes/pagamentos/180x25-pagar-azul.gif"
+                         alt="Pague com PagSeguro - é rápido, grátis e seguro!" />
+                </a><!-- FIM DO BOTAO PAGSEGURO -->
+
+                {% comment %}<h4 class="mt-4">Entre para a Lista de Espera do curso</h4>
+                <!-- Begin Mailchimp Signup Form -->
+                <form action="https://ufpe.us2.list-manage.com/subscribe/post?u=3e1a01dbfbd0804e9009e2415&amp;id=29f81a4733"
+                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                      class="form-row align-items-center" target="_blank" novalidate>
+                  <div class="form-row align-items-center">
+                    <div class="col-auto">
+                        <label class="sr-only" for="mce-EMAIL">First Name </label>
+                        <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Nome">
+                    </div>
+                    <div class="col-auto">
+                        <label class="sr-only" for="mce-EMAIL">Email</label>
+                        <input type="email" value="" name="EMAIL" class="form-control required"
+                               id="mce-EMAIL" placeholder="exemplo@gmail.com">
+                    </div>
+
+                      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                        <input type="text" name="b_3e1a01dbfbd0804e9009e2415_29f81a4733" tabindex="-1" value="">
+                    </div>
+                    <div class="col-auto">
+                      <button type="submit" class="btn btn-primary mb-2" id="mc-embedded-subscribe">Enviar</button>
+                    </div>
+                  </div>
+                </form>{% endcomment %}
 
 			</div>
 			<div class="row">
