--- a/pypro/aperitivos/templates/aperitivos/video.html
+++ b/pypro/aperitivos/templates/aperitivos/video.html
@@ -47,9 +47,10 @@
 					<div class="card">
                         <h1>Video Aperitivo: Motivação</h1>
 
-                        <div class="embed-responsive embed-responsive-16by9 mt-4 mb-3" >
-                            <iframe src="https://youtu.be/aaK-H1EHmA4?list=PL_seZA3jrQ_Amp2qkfnnV5H4MEMB0nfOx"
-                                    class="embed-responsive-item" allowfullscreen></iframe>
+                        <div class="embed-responsive embed-responsive-16by9" >
+                            <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
+                                    width="420" height="315" class="embed-responsive-item" allowfullscreen
+                                    frameborder="0" allowfullscreen ng-show="showvideo"></iframe>
                         </div>
 
 					</div>
