--- a/pypro/base/templates/base/home.html
+++ b/pypro/base/templates/base/home.html
@@ -1,42 +1,11 @@
+{% extends 'base/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Python Pro</title>
+{% block title %}Python Pro - Home{% endblock title %}
 
-    <meta name="description" content="Página do curso PythonPro">
-    <meta name="author" content="Lucas Ravellys">
 
-    <link rel="icon" type="image/png" href="{% static 'img/favicon.png' %}"/>
-    <link type="text/css" href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <link type="text/css" href={% static  'css/style.css' %} rel="stylesheet">
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'js/scripts.js' %}"></script>
-
-  </head>
-  <body>
-
-  <div class="container-fluid col-md-12" style="padding-right: 0; padding-left: 0;">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="{% url 'base:home' %}">Python Pro</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-
-            </ul>
-        </div>
-      </nav>
-  </div>
-
-    <div class="container-fluid">
+{% block body %}
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<div class="jumbotron">
@@ -102,34 +71,4 @@
 		</div>
 	</div>
 </div>
-
-  <footer class="main-footer mt-5 pt-5 text-light">
-      <div class="container">
-          <div class="row">
-              <div class="col">
-                  <h3>Entre em contato</h3>
-                  <address>
-                      <a href="tel:+5512997411854" class="text-light">+55 12 997-411-854</a>
-                      <br/>
-                      <a href="mailto:lucas.ravellys@ufpe.br" class="text-light">lucas.ravellys@ufpe.br</a>
-                  </address>
-              </div>
-          </div>
-      </div>
-
-      <div class="rights pb-4">
-          <div class="container">
-
-              <div class="row">
-                    <div class="col">
-                        {% now 'Y' %} Python Pro. Todos direitos reservados
-                    </div>
-              </div>
-          </div>
-      </div>
-
-
-  </footer>
-
-  </body>
-</html>
+{% endblock body %}
