--- a/pypro/aperitivos/templates/aperitivos/video.html
+++ b/pypro/aperitivos/templates/aperitivos/video.html
@@ -17,7 +17,7 @@
                         <h1>{{ video.title | default:'Faltando Título' }}</h1>
 
                         <div class="embed-responsive embed-responsive-16by9" >
-                            <iframe src="https://www.youtube.com/embed/{{ video.id }}"
+                            <iframe src="https://www.youtube.com/embed/{{ video.v_id }}"
                                     width="420" height="315" class="embed-responsive-item" allowfullscreen
                                     frameborder="0" allowfullscreen ng-show="showvideo"></iframe>
                         </div>
