--- a/pypro/base/static/css/style.css
+++ b/pypro/base/static/css/style.css
@@ -5,3 +5,10 @@
 .rights{
     background-color: #0b4818;
 }
+
+.video{
+    margin: 0px 120% 120% 0px;
+    padding: 0px 120px 120px 0px;
+    align-content: center;
+    border: none;
+}
