--- a/pypro/modulos/templates/modulos/aula_detalhe.html
+++ b/pypro/modulos/templates/modulos/aula_detalhe.html
@@ -24,8 +24,8 @@
 
                         <div class="embed-responsive embed-responsive-16by9" >
                             <iframe src="https://www.youtube.com/embed/{{ aula.v_id }}"
-                                    width="420" height="120" class="embed-responsive-item" allowfullscreen
-                                    frameborder="exit ng-show="showvideo"></iframe>
+                                    class="video embed-responsive-item" allowfullscreen
+                                    frameborder="exit" ng-show="showvideo"></iframe>
                         </div>
 
 					</div>
